# CaliceInstall

./: .gitignore  CMakeLists.txt  README.md  build.sh  init_ilcsoft.sh  myMarlin  update.sh  user-pro-test_x86_64_gcc48_sl6.cmake  user-pro-test_x86_64_gcc49_sl6.cmake  user-pro-test_x86_64_gcc82_sl6.cmake
cmake/: BUILD_FLAG.cmake  DOCUMENTATION.cmake  DetectDistribution.cmake  FULL_INSTALL_PATH.cmake  calice_default_cxx_flags.cmake  calice_default_settings.cmake  ilcsoft_default_settings.cmake
patch/: DBInitString.patch  FindBOOST.patch
